test/equality/negative/wrong_ret.mli
val f : int -> int -> string
(*@ equality *)
